# VolvoTools

./: .gitignore  .gitmodules  AGENTS.md  CEMCanMessage.cpp  CEMCanMessage.hpp  CMakeLists.txt  J2534.chm  J2534.cpp  J2534.hpp  J2534Channel.cpp  J2534Channel.hpp  J2534_v0404.h  LogParameter.cpp  LogParameter.hpp  LogParameters.cpp  LogParameters.hpp  Logger.cpp  Logger.h  LoggerApplication.cpp  LoggerApplication.hpp  README.md  VolvoLogger.cpp  VolvoLogger.sln  VolvoLogger.vcxproj  VolvoLogger.vcxproj.filters  VolvoTools.sln  conanfile.txt  example.ecu  keys.cpp  prepare_build.bat  s60r.ecu
.github/workflows/: build.yml
Common/: CEMCanMessage.cpp  CEMCanMessage.hpp  CMType.hpp  CMakeLists.txt  CanMessage.cpp  CanMessage.hpp  CanMessages.cpp  CanMessages.hpp  CanMessagesTransceiver.cpp  CanMessagesTransceiver.hpp  Common.cpp  Common.vcxproj  Common.vcxproj.filters  D2Message.cpp  D2Message.hpp  D2Messages.cpp  D2Messages.hpp  IChannel.hpp  IDevice.hpp  MessageSubscription.cpp  Util.cpp  Util.hpp  generate_project.bat
Common/common/: BusConfiguration.hpp  CMType.hpp  CanAlarmClock.hpp  CanFrame.hpp  CanIdProvider.hpp  CanMessage.hpp  CanMessagesTransceiver.hpp  CarPlatform.hpp  ChannelSubscriptions.hpp  ChecksumHelper.hpp  CommonData.hpp  ConfigurationInfo.hpp  D2Message.hpp  D2Messages.hpp  D2ProtocolCommonSteps.hpp  D2Request.hpp  DeviceInfo.hpp  ECUInfo.hpp  GenericProcess.hpp  GenericProcessState.hpp  ICanChannel.hpp  IChannel.hpp  J2534ChannelAdapter.hpp  J2534ChannelProvider.hpp  J2534Info.hpp  KWP2000ProtocolCommonSteps.hpp  LogHelper.hpp  MessageSubscription.hpp  ProtocolType.hpp  RuntimeDiagnostics.hpp  SBL.hpp  UDSCommonStepData.hpp  UDSError.hpp  UDSProtocolBase.hpp  UDSProtocolCallback.hpp  UDSProtocolCommonSteps.hpp  UDSProtocolStep.hpp  UDSRequest.hpp  Util.hpp  VBF.hpp  (+7 more)
Common/common/compression/: BoschCompressor.hpp  CompressionType.hpp  CompressorBase.hpp  CompressorFactory.hpp  LZSSCompressor.hpp
Common/common/encryption/: EncryptionType.hpp  EncryptorBase.hpp  EncryptorFactory.hpp  XOREncryptor.hpp
Common/common/protocols/: D2ECUType.hpp  D2Error.hpp  D2Message.hpp  D2Messages.hpp  D2ProtocolCommonSteps.hpp  D2Request.hpp  KWPProtocolCommonSteps.hpp  RequestProcessorBase.hpp  TP20Error.hpp  TP20Message.hpp  TP20Request.hpp  TP20RequestProcessor.hpp  TP20Service.hpp  TP20Session.hpp  UDSMessage.hpp  UDSPinFinder.hpp  UDSProtocolCommonSteps.hpp  UDSRequest.hpp  UDSRequestProcessor.hpp  UDSStepType.hpp
Common/src/: CanAlarmClock.cpp  CanIdProvider.cpp  CanMessage.cpp  CanMessagesTransceiver.cpp  ChecksumHelper.cpp  CommonData.cpp  D2Error.cpp  D2Message.cpp  D2Messages.cpp  D2ProtocolCommonSteps.cpp  D2Request.cpp  GenericProcess.cpp  J2534ChannelAdapter.cpp  J2534ChannelProvider.cpp  J2534Info.cpp  KWP2000ProtocolCommonSteps.cpp  MessageSubscription.cpp  RuntimeDiagnostics.cpp  SBL.cpp  UDSError.cpp  UDSMessage.cpp  UDSPinFinder.cpp  UDSProtocolBase.cpp  UDSProtocolCommonSteps.cpp  UDSProtocolStep.cpp  UDSRequest.cpp  UDSStepType.cpp  Util.cpp  VBFParser.cpp  VBFParser.сpp  VBFUtil.cpp
Common/src/compression/: BoschCompressor.cpp  CompressorFactory.cpp  LZSSCompressor.cpp
Common/src/encryption/: EncryptorBase.cpp  EncryptorFactory.cpp  SA2.cpp  XOREncryptor.cpp
Common/src/protocols/: D2Error.cpp  D2Message.cpp  D2Messages.cpp  D2ProtocolCommonSteps.cpp  D2Request.cpp  KWPProtocolCommonSteps.cpp  TP20Error.cpp  TP20Message.cpp  TP20Request.cpp  TP20RequestProcessor.cpp  TP20Session.cpp  UDSError.cpp  UDSMessage.cpp  UDSPinFinder.cpp  UDSProtocolCommonSteps.cpp  UDSRequest.cpp  UDSRequestProcessor.cpp  UDSStepType.cpp
Common/test/: CMakeLists.txt  D2MessageTest.cpp  D2RequestTest.cpp
Flasher/: CMakeLists.txt
Flasher/flasher/: CompressionType.hpp  CompressorBase.hpp  D2Flasher.hpp  D2FlasherBase.hpp  D2Reader.hpp  D2ReaderAW55.hpp  D2ReaderChecksum.hpp  D2ReaderDEM.hpp  D2ReaderME7.hpp  D2ReaderTF80.hpp  EncryptionType.hpp  FlasherBase.hpp  FlasherCallback.hpp  FlasherCallbackHolder.hpp  FlasherConfigs.hpp  (+17 more)
Flasher/test/: CMakeLists.txt  D2FlasherTest.cpp  MockICanChannel.hpp
Logger/: CMakeLists.txt
VolvoFlasher/: CMakeLists.txt  D2Flasher.cpp  D2Flasher.hpp  Flasher.cpp  Flasher.hpp  VolvoFlasher.cpp  VolvoFlasher.vcxproj  VolvoFlasher.vcxproj.filters
VolvoFlasher/src/: D2Flasher.cpp  VolvoFlasher.cpp
VolvoLogger/: CMakeLists.txt  FileLogWriter.cpp  FileLogWriter.hpp  LogParameter.cpp  LogParameters.cpp  LogParameters.hpp  Logger.cpp  Logger.h  Logger.hpp  LoggerApplication.cpp  LoggerApplication.hpp  LoggerCallback.hpp  TCM55DataLogger.cpp  TCM55DataLogger.hpp  TCM80DataLogger.cpp  TCM80DataLogger.hpp  TCMDataLogger.cpp  TCMDataLogger.hpp  VolvoLogger.cpp  VolvoLogger.vcxproj  VolvoLogger.vcxproj.filters
VolvoLogger/src/: FileLogWriter.cpp  FileLogWriter.hpp  LogParameter.cpp  LogParameter.hpp  LogParameters.cpp  LogParameters.hpp  Logger.cpp  LoggerApplication.cpp  LoggerApplication.hpp  TCM55DataLogger.cpp  TCM80DataLogger.cpp  VolvoLogger.cpp
j2534/: J2534.cpp  J2534.hpp  J2534Channel.cpp  J2534Channel.hpp  J2534_v0404.h  j2534.vcxproj  j2534.vcxproj.filters
(+53 files in other folders)
